種類、產品頁面調整，新增判斷

--- a/PhoneShop/PhoneShop/Views/Home/Index.cshtml
+++ b/PhoneShop/PhoneShop/Views/Home/Index.cshtml
@@ -169,7 +169,8 @@
     var priceSlider = $("#slide-range").slider({
         range: true,
 		min: 0,
-		max: @Model.MaximumPrice,
+        max: @Model.MaximumPrice,
+        step: 100,
         values: [0, @Model.MaximumPrice],
         slide: function (event, ui) {
             var minPrice = ui.values[0];
