--- a/PhoneShop/PhoneShop/Views/Shared/_Layout.cshtml
+++ b/PhoneShop/PhoneShop/Views/Shared/_Layout.cshtml
@@ -55,7 +55,8 @@
             <p>&copy; 手機商店</p>
         </footer>
     </div>
-    
+
+    <input type="hidden" id="hdnSession" data-value="@Request.RequestContext.HttpContext.Session["Admin"]" />
     <script src="~/Content/main.js"></script>
 </body>
 </html>
