--- a/PhoneShop/PhoneShop/Views/Category/CategoryTable.cshtml
+++ b/PhoneShop/PhoneShop/Views/Category/CategoryTable.cshtml
@@ -50,7 +50,7 @@
                             <br />
                             @foreach (var product in category.Products)
                             {
-                                <span>@product.Name, </span>
+                                <span>@product.Name | </span>
                             }
                         </td>
                         <td class="wrap-td">
@@ -66,6 +66,7 @@
             }
         </tbody>
     </table>
+    <span style="color:Red; font-size: 16px; font-weight: bold; text-align: center; display:block;">@TempData["CategoryMessage"]</span>
 </div>
 
 <script>
