--- a/PhoneShop/PhoneShop/Views/Home/Register.cshtml
+++ b/PhoneShop/PhoneShop/Views/Home/Register.cshtml
@@ -35,6 +35,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="註冊" class="btn btn-default" />
+                @ViewBag.Message
             </div>
         </div>
     </div>
