--- a/PhoneShop/PhoneShop/Views/Home/Index.cshtml
+++ b/PhoneShop/PhoneShop/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
     <div class="row">
         <div class="col-md-12">
             <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="3000">
-                <ol class="carousel-indicators">
+                <ol class="carousel-indicators" style="background-image: linear-gradient(360deg, #c0c0c0, #888888)">
                     @for (int j = 0; j < i; j++)
                     {
                         <li data-target="#carousel" data-slide-to="@j" class="@if (j == 0) { <text>active</text> } "></li>
@@ -54,10 +54,10 @@
                 <div class="carousel-inner">
                     @for (int j = 0; j < i; j++)
                     {
-                        <div class="item @if (j == 0) { <text>active</text> } ">
-                            <img class="center-block" style="width: auto; height: 500px;" src="@carouselImage["image" + j]" alt="First slide">
+                        <div class="item @if (j == 0) { <text>active</text> }" style="width: auto; height: 500px;">
+                            <img class="center-block" style="width: 40%; height: 75%" src="@carouselImage["image" + j]" alt="First slide">
                             <div class="carousel-caption">
-                                <h4>@carouselProductCategory["category" + j]</h4>
+                                <h3>@carouselProductCategory["category" + j]</h3>
                                 <h2>@carouselProductName["name" + j]</h2>
                             </div>
                         </div>
