訂單新增th欄位

--- a/PhoneShop/PhoneShop/Views/Category/CategoryTable.cshtml
+++ b/PhoneShop/PhoneShop/Views/Category/CategoryTable.cshtml
@@ -35,7 +35,7 @@
             <tr>
                 <th class="font-weight-bold">種類</th>
                 <th class="font-weight-bold">產品</th>
-                <th class="font-weight-bold">動作</th>
+                <th class="font-weight-bold" style="text-align: center">動作</th>
             </tr>
         </thead>
         <tbody>
@@ -53,7 +53,7 @@
                                 <span>@product.Name | </span>
                             }
                         </td>
-                        <td class="wrap-td">
+                        <td style="text-align: center">
                             <button class="editBtn" data-id="@category.ID">修改</button>
                             <button class="deleteBtn" data-id="@category.ID">刪除</button>
                         </td>
