--- a/PhoneShop/PhoneShop/Views/Order/OrderTable.cshtml
+++ b/PhoneShop/PhoneShop/Views/Order/OrderTable.cshtml
@@ -8,6 +8,7 @@
                 <th class="font-weight-bold">下訂時間</th>
                 <th class="font-weight-bold">訂單總價</th>
                 <th class="font-weight-bold">訂單狀態</th>
+                <th class="font-weight-bold">訂單詳細</th>
             </tr>
         </thead>
         <tbody>
