--- a/PhoneShop/PhoneShop/Views/Shared/_Layout.cshtml
+++ b/PhoneShop/PhoneShop/Views/Shared/_Layout.cshtml
@@ -7,15 +7,19 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
     <script src="~/Scripts/jquery.cookie.js"></script>
-    
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
+                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
                 @Html.ActionLink("手機商店", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="navbar-collapse collapse" id="navbarToggleExternalContent">
                 <ul class="nav navbar-nav">
                     @if (Session["Member"] == null && Session["Admin"] == null)
                     {
