bootstrap.min add

--- a/PhoneShop/PhoneShop/Views/Home/Register.cshtml
+++ b/PhoneShop/PhoneShop/Views/Home/Register.cshtml
@@ -1,5 +1,7 @@
 ﻿@model PhoneShop.ViewModels.RegisterMemberViewModel
 
+<script src="~/Scripts/bootstrap.min.js"></script>
+
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
