--- a/PhoneShop/PhoneShop/Views/Home/ShoppingCart.cshtml
+++ b/PhoneShop/PhoneShop/Views/Home/ShoppingCart.cshtml
@@ -1,5 +1,6 @@
 ﻿@model PhoneShop.ViewModels.ShoppingCartViewModel
 
+<script src="~/Scripts/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
 <script src="~/Scripts/jquery.cookie.js"></script>
 <link href="~/Content/stylesheets/homeStyle.css" rel="stylesheet" />
