--- a/PhoneShop/PhoneShop/Views/Category/Index.cshtml
+++ b/PhoneShop/PhoneShop/Views/Category/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿
+<script src="~/Scripts/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
 
