--- a/PhoneShop/PhoneShop/Views/Home/Login.cshtml
+++ b/PhoneShop/PhoneShop/Views/Home/Login.cshtml
@@ -1,5 +1,7 @@
 ﻿@model PhoneShop.ViewModels.LoginMemberViewModel
 
+<script src="~/Scripts/bootstrap.min.js"></script>
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
