--- a/PhoneShop/PhoneShop/Views/Order/Index.cshtml
+++ b/PhoneShop/PhoneShop/Views/Order/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿
+<script src="~/Scripts/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
 <link href="~/Content/stylesheets/homeStyle.css" rel="stylesheet" />
 
