--- a/PhoneShop/PhoneShop/Views/Home/FilterProducts.cshtml
+++ b/PhoneShop/PhoneShop/Views/Home/FilterProducts.cshtml
@@ -43,6 +43,14 @@
     </div>
 }
 
+@if (Model.Products.Count >= 1 && Model.Products.Count <= 3)
+{
+    //若顯示的產品列表只有1~3個，補加高度
+    <div class="col-md-12" style="height: 372px;">
+
+    </div>
+}
+
 <div class="col-md-12">
     @if (Model.Pager != null && Model.Pager.TotalPages > 1)
     {
@@ -51,7 +59,7 @@
                 @if (Model.Pager.CurrentPage > 1)
                 {
                     <li class="prev">
-                        <a data-href="@Url.Action("FilterProducts", "Home", new { pageNo = Model.Pager.CurrentPage - 1, sortBy = Model.SortBy, categoryID = Model.CategoryID })" class="pageDataLink"><i class="fa fa-angle-left"></i></a>
+                        <a data-href="@Url.Action("FilterProducts", "Home", new { pageNo = Model.Pager.CurrentPage - 1, sortBy = Model.SortBy, categoryID = Model.CategoryID })" class="pageDataLink" style="cursor: pointer;"><i class="fa fa-angle-left"></i></a>
                     </li>
                 }
 
@@ -59,12 +67,12 @@
                 {
                     string activeClass = Model.Pager.CurrentPage == page ? "active bg-info" : string.Empty;
 
-                    <li class="@activeClass"><a data-href="@Url.Action("FilterProducts", "Home", new { pageNo = page, sortBy = Model.SortBy, categoryID = Model.CategoryID })" title="" class="pageDataLink">@page</a></li>
+                    <li class="@activeClass"><a data-href="@Url.Action("FilterProducts", "Home", new { pageNo = page, sortBy = Model.SortBy, categoryID = Model.CategoryID })" title="" class="pageDataLink" style="cursor: pointer;">@page</a></li>
                 }
 
                 @if (Model.Pager.CurrentPage < Model.Pager.TotalPages)
                 {
-                    <li><a data-href="@Url.Action("FilterProducts", "Home", new { pageNo = Model.Pager.CurrentPage + 1, sortBy = Model.SortBy, categoryID = Model.CategoryID})" class="pageDataLink"><i class="fa fa-angle-right"></i></a></li>
+                    <li><a data-href="@Url.Action("FilterProducts", "Home", new { pageNo = Model.Pager.CurrentPage + 1, sortBy = Model.SortBy, categoryID = Model.CategoryID})" class="pageDataLink" style="cursor: pointer;"><i class="fa fa-angle-right"></i></a></li>
                 }
             </ul>
         </div>
