Home/Index修改搜尋關鍵字功能，改於js get element value and call GetData function。 js dataLink click function增加產品排序、品牌查詢使用時新增css功能。 Home/FilterProducts有用搜尋關鍵字時，顯示關鍵字搜尋文字。 調整CSS、新增註解

--- a/PhoneShop/PhoneShop/Views/Home/FilterProducts.cshtml
+++ b/PhoneShop/PhoneShop/Views/Home/FilterProducts.cshtml
@@ -11,6 +11,10 @@
 <link href="~/Content/stylesheets/homeStyle.css" rel="stylesheet" />
 
 <div class="filter-shop clearfix">
+    <p class="showing-filter" style="float: left">
+        @if (!string.IsNullOrEmpty(Model.SearchTerm)) { <text>搜尋關鍵字: @Model.SearchTerm</text>}
+    </p>
+
     <p class="showing-product" style="float: right">
         @if (Model.Pager.TotalItems > 0)
         {
