--- a/PhoneShop/PhoneShop/Content/stylesheets/homeStyle.css
+++ b/PhoneShop/PhoneShop/Content/stylesheets/homeStyle.css
@@ -148,6 +148,7 @@
 }
 
 .filter-shop .showing-product,
+.filter-shop .showing-filter,
 .filter-shop ul.flat-filter-search li {
     color: #333333;
     font-size: 16px;
@@ -157,6 +158,11 @@
 .filter-shop .showing-product {
     font-weight: 400;
     float: left;
+}
+
+.filter-shop .showing-filter {
+    font-weight: 400;
+    float: right;
 }
 
 .filter-shop ul.flat-filter-search {
