訂單功能測試、新增註解。

--- a/PhoneShop/PhoneShop/Views/Order/Index.cshtml
+++ b/PhoneShop/PhoneShop/Views/Order/Index.cshtml
@@ -25,6 +25,7 @@
 </section>
 
 <script>
+    //按下訂單詳細資料後，畫面移動
     function focusAction(controlToFocus) {
         $('html, body').animate({
             scrollTop: $("#" + controlToFocus).offset().top - 100
