--- a/PhoneShop/PhoneShop/Views/Order/Detail.cshtml
+++ b/PhoneShop/PhoneShop/Views/Order/Detail.cshtml
@@ -6,7 +6,7 @@
 @if (Model != null && Model.Order != null)
 {
     <section class="flat-row main-shop shop-slidebar">
-        <div class="container">
+        <div class="container" style="cursor: pointer;">
             <div class="row">
                 <div class="col-md-4 order-md-2 mb-4 col-md-offset-2">
                     <h4 class="d-flex justify-content-between align-items-center mb-3">
@@ -36,14 +36,14 @@
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <label for="UserId">姓名</label>
-                                <input type="text" class="form-control" id="UserId" value="@Model.OrderMember.UserId" disabled>
+                                <input type="text" class="form-control" id="UserId" value="@Model.OrderMember.UserId" disabled style="cursor: pointer;">
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-md-6 mb-3" style="margin-top: 20px">
                                 <label for="UserEmail">信箱</label>
-                                <input type="email" class="form-control" id="UserEmail" value="@Model.OrderMember.UserEmail" disabled>
+                                <input type="email" class="form-control" id="UserEmail" value="@Model.OrderMember.UserEmail" disabled style="cursor: pointer;">
                             </div>
                         </div>
 
@@ -55,14 +55,14 @@
                                     <select name="Status" id="changeStatus" class="form-control">
                                         @foreach (var status in Model.OrderStatuses)
                                         {
-                                            var selected = status == Model.Order.Status ? "selected" : string.Empty;
+                                            var selected = (status == Model.Order.Status) ? "selected" : string.Empty;
                                             <option @selected>@status</option>
                                         }
                                     </select>
                                 }
                                 else
                                 {
-                                    <input type="text" class="form-control" id="OrderStatus" value="@Model.Order.Status" disabled>
+                                    <input type="text" class="form-control" id="OrderStatus" value="@Model.Order.Status" disabled style="cursor: pointer;">
                                 }
                             </div>
                         </div>
@@ -73,6 +73,7 @@
     </section>
 
     <script>
+    //管理者修改訂單狀態
 	$("#changeStatus").change(function () {
 		$.ajax({
 			url: '@Url.Action("ChangeStatus", "Order")',
@@ -96,7 +97,7 @@
                 swal("失敗", "訂單無法更新", "warning");
         	}
         })
-        .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+        .fail(function () {
         	alert("FAIL");
         });
 	});
