--- a/PhoneShop/PhoneShop/Views/Shared/_Layout.cshtml
+++ b/PhoneShop/PhoneShop/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                     }
                     else if (Session["Admin"] != null)
                     {
-                        <li>@Html.ActionLink("產品種類", "Index", "Category")</li>
+                        <li>@Html.ActionLink("產品品牌", "Index", "Category")</li>
                         <li>@Html.ActionLink("產品", "Index", "Product")</li>
                         <li>@Html.ActionLink("訂單管理", "Index", "Order")</li>
                     }
