--- a/PhoneShop/PhoneShop/Views/Category/Edit.cshtml
+++ b/PhoneShop/PhoneShop/Views/Category/Edit.cshtml
@@ -4,19 +4,18 @@
     var imageURL = !string.IsNullOrEmpty(Model.ImageURL) ? Model.ImageURL : "/Content/images/system/placeholder-image.png";
 }
 
-<h2>修改種類</h2>
+<h2>修改品牌</h2>
 
 <form id="editCategory">
     <input type="hidden" name="ID" value="@Model.ID" />
-
     <div class="row">
         <div class="col-md-8">
             <div class="form-group">
-                <label>名稱</label>
+                <label>品牌名稱</label>
                 <input class="form-control" name="Name" value="@Model.Name" />
             </div>
             <div class="form-group">
-                <label>圖片</label>
+                <label>品牌圖片</label>
                 <input type="hidden" id="ImageURL" name="ImageURL" value="@Model.ImageURL" />
                 <input class="form-control" id="imageUpload" name="Image" type="file" accept=".png, .jpg" />
             </div>
@@ -32,51 +31,86 @@
 </form>
 
 <script>
+    //選擇圖片上傳
     $("#imageUpload").change(function () {
-        var element = this;
         var formData = new FormData();
-        var totalFiles = element.files.length;
-        for (var i = 0; i < totalFiles; i++) {
-            var file = element.files[i];
-            formData.append("Photo", file);
-        }
+        formData.append("Photo", this.files[0]);
+
         $.ajax({
-            type: 'POST',
+            type: "POST",
             url: '@Url.Action("UploadImage", "Shared")',
-            dataType: 'json',
+            dataType: "json", // 傳回 JSON 資料類型
             data: formData,
-            contentType: false,
-            processData: false
+            contentType: false, // 設定傳送資料至 Server 的編碼類型
+            processData: false // 設定是否自動將 data 轉為 query string
         })
         .done(function (response) {
-            console.log(response);
             if (response.Success) {
                 $("#ImageURL").val(response.ImageURL);
-                $("#categoryImage").attr("src", response.ImageURL);
+                $("#categoryImage").attr("src", response.ImageURL); // 上傳的圖片取代掉原先的圖片
             }
         })
-        .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+        .fail(function () {
             alert("FAIL");
         });
     });
 
+    //驗證表單
+    $("#editCategory").validate({
+        rules: {
+            Name: { // to Name element
+                required: true,
+                minlength: 1,
+                maxlength: 50
+            }
+        },
+        messages: {
+            Name: { // to Name element
+                required: '名稱不可為空白',
+                minlength: '名稱字數下限為1',
+                maxlength: '名稱字數上限為50'
+            }
+        }
+    });
+
+    //按下修改按鈕
     $("#updateBtn").click(function () {
-        $.ajax({
-            type: 'POST',
-            url: '@Url.Action("Edit", "Category")',
-            data: $("#editCategory").serialize()
-        })
-        .done(function (response) {
-            $("#tableContainer").html(response);
-            $("#actionContainer").html("");
+        if ($("#editCategory").valid()) {
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("Edit", "Category")',
+                data: $("#editCategory").serialize() // 序列化表單元素
+            })
+            .done(function (response) {
+                $("#tableContainer").html(response);
+                $("#actionContainer").html("");
 
-            focusAction("tableContainer");
-        })
-        .fail(function (XMLHttpRequest, textStatus, errorThrown) {
-            alert("FAIL");
-        });
+                focusAction("tableContainer");
+            })
+            .fail(function () {
+                swal({
+                    title: "警告",
+                    text: "請輸入所有欄位",
+                    icon: "warning",
+                    buttons: true,
+                    dangerMode: true
+                });
+            });
+        }
+        else {
+            swal({
+                title: "警告",
+                text: "請輸入有效資料",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true
+            });
+
+            document.querySelector('#Name-error').style.color = 'red'; // 驗證錯誤，故會顯示文字，加入css
+        }
     });
 
+    //按下取消按鈕
     $("#cancelBtn").click(function () {
         $("#actionContainer").html("");
 
